Fixed up spacing in the layout.

--- a/pages/home/styles.module.scss
+++ b/pages/home/styles.module.scss
@@ -1,9 +1,5 @@
 .home {
   max-width: var(--max-width);
-
-  padding-top: var(--spacing-900);
   display: flex;
   flex-direction: column;
-  width: 100svw;
-  height: 100svh;
 }
